# datablocksAPI

./: .env  .gitignore  DataBlock_Schema_Documentation.xlsx  LICENSE  README.md  SCHEMA.md  V2_IMPLEMENTATION_PLAN.md  datablock.db  extract_pdf_schema.py  parse_complete_schema.py  pdf_full_content.txt  pyproject.toml  request_data.ipynb  requirements.txt  test_import.py  test_sigevents.py
.github/workflows/: ci.yml
Material/: companyfinancial.json  companyinfo.json  eventsfilings.json
datablockAPI/: __init__.py  config.py  exceptions.py  health.py  logging_config.py  metrics.py
datablockAPI/api/: __init__.py  client.py
datablockAPI/core/: __init__.py  database.py  loader.py  models.py
datablockAPI/utils/: __init__.py
pre_analyze/: analyze_structure.py  check_all_types.py  check_exclusions.py  check_financials.py  deep_analyze_events.py  show_hierarchy.py
tests/: conftest.py  requirements.txt
